--- a/src/scss/theme/header.scss
+++ b/src/scss/theme/header.scss
@@ -7,6 +7,10 @@
         padding: 44px 0;
     }
 
+    .uk-navbar {
+        position: static;
+    }
+
     .uk-navbar-nav>li {
         padding: 0 17px;
 
